--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 [dependencies]
 device_query = "2.1.0"
 cpal =  "0.15.3"
-audrey = "0.3"
 rodio = "0.19.0"
 anyhow = "1.0.86"
-
+rand = "0.8"
